--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
+    "expo-asset": "^8.9.1",
+    "expo-constants": "^14.2.1",
+    "expo-contacts": "^12.0.1",
+    "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.1",
+    "nanoid": "^4.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "^18.2.0",
+    "react-native": "0.71.8",
+    "react-native-easy-grid": "^0.2.2",
+    "react-native-gesture-handler": "^2.11.0",
+    "react-native-get-random-values": "^1.9.0",
+    "react-native-gifted-chat": "^2.1.0",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-native-web": "^0.19.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
